Added git log to report

--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -6,9 +6,8 @@
 \usepackage{pdfpages}
 \usepackage{graphicx}
 \usepackage{url}
-
 \usepackage[parfill]{parskip}
-
+\usepackage{verbatim}
 \usepackage{listings}
 \usepackage{color}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
@@ -1084,7 +1083,7 @@ Graph of social media connections and klout score in the Nereus framework\citep{
 A help page showing the command line arguments that can be supplied.
 
 \section{GitHub Commit log}
-\todo{Add commit log}
+\verbatiminput{res/git_log.txt}
 
 \section{Full Source Code}
 \subsection{facegather.py}
